handle modded arts and potions